@@ -34,6 +34,7 @@ since version 2.2.0:
 * Source packages are now compressed using xz instead of bzip2.
 * GTK+ is disabled by default in Autotools and CMake.
 * SS7 Point Codes can now be resolved into names with a hosts-like file.
+* Wireshark can now go fullscreen to have more room for packets.
 
 //=== Removed Dissectors
 
